--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "backbone.uniquemodel",
+  "name": "rwell-backbone.uniquemodel",
   "description": "Backbone.UniqueModel ensures unique model instances across your application.",
   "homepage": "https://github.com/disqus/backbone.uniquemodel",
   "main": "./backbone.uniquemodel.js",
   "license": "Apache",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "keywords": [
     "backbone",
     "localStorage",
@@ -20,8 +20,7 @@
     "package.json"
   ],
   "dependencies": {
-    "backbone": "1.0.0 - 1.1.2",
-    "underscore": "1.4.4 - 1.6.0",
-    "jquery": "^1.8.0 || ^2.0.0"
+    "backbone": "1.3.3",
+    "underscore": "1.8.3"
   }
 }
